<resources>
    <string name="app_name">SoftRoute_v1</string>
    <string name="enter_your_credentias">Enter your credentias</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_user">Enter your user</string>
    <string name="enter_your_credentials">Please enter your credentials</string>
    <string name="create_account">Create account</string>
    <string name="signup">SignUp</string>
    <string name="sing_up">Sing Up</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="enter_password">Enter password</string>
    <string name="name_">Name</string>
    <string name="phone_">Phone</string>
    <string name="date_of_birth_">Date of birth</string>
    <string name="create_a_shipment_">Create a shipment</string>
    <string name="destination_">Destination</string>
    <string name="address">Address</string>
    <string name="sender_information">Sender Information</string>
    <string name="name">Name</string>
    <string name="consignee_information">Consignee Information</string>
    <string name="nameConsignee">Name</string>
    <string name="nameSender">Name</string>
    <string name="identification_document_Consignee">Identification document</string>
    <string name="view_shipment_status">View shipment status</string>
    <string name="shipment_list">Shipment List</string>
    <string name="coments">Coments</string>
    <string name="weight">Weight</string>
    <string name="quantity_">Quantity</string>
    <string name="administrators_">Administrators</string>
    <string name="client_">Client</string>
    <string name="nav_mail_">thomyorke@radiohead.com</string>
    <string name="nav_userName_">Thom Yorke</string>
    <string name="agregar_comentario">Agregar Comentario</string>
    <string name="ver_mis_comentarios">Ver mis comentarios</string>
    <string name="comments_" />
    <string name="comments">Comentarios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_shipment_list">Shipment List</string>
    <string name="admin_menu_tracking">Tracking</string>
    <string name="admin_menu_shipment_list">Shipment List</string>
    <string name="admin_menu_comments">Comments</string>


    <string name="open_nav">Abrir</string>
    <string name="close_nav">Cerrar</string>
    <string name="admin_menu_home">Home</string>
    <string name="admin_menu_add_shipment">Add Shipment</string>
    <string name="admin_menu_logout">Logout</string>
    <string name="admin_bottom_home">Home</string>
    <string name="admin_bottom_add_shipment">Add Shipment</string>
    <string name="admin_bottom_shipment_list">Shipment List</string>
    <string name="admin_bottom_tracking">Tracking</string>
    <string name="admin_bottom_comments">Comments</string>
    <string name="admin_fragment_comments">Comments</string>
    <string name="client_bottom_home">Home</string>
    <string name="client_bottom_tracking">Tracking</string>
    <string name="situacion">Situación:</string>
    <string name="detalle_de_envio">Detalle de Envío</string>
    <string name="codigo">Código:</string>
    <string name="fecha_recepcion">Fecha Recepcion:</string>
    <string name="fecha_envio">Fecha Envío:</string>
    <string name="fecha_entrega">Fecha Entrega:</string>
    <string name="entregado">Entregado:</string>
    <string name="consignees_list">Consignees List</string>
    <string name="senders_list">Senders List</string>
    <string name="type_of_package">Type of package</string>
    <string name="freight">freight</string>
    <string name="description">Description</string>
    <string name="emailSender">Identification document</string>
    <string name="emailconsignee">emailConsignee</string>
    <string name="email_consignee">Email</string>
    <string name="emailsender">Email</string>
    <string name="consigneeDNI">DNI</string>
    <string name="typeDocument">Type</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="dateShipment">Date</string>
    <string name="manage_destination">Manage Destination</string>
    <string name="destination_name">Destination</string>
    <string name="delete_destination">Eliminar</string>
    <string name="TypePayment">Type</string>
</resources>