<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="all">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/admin_menu_home" />

        <item
            android:id="@+id/nav_admin_add_shipment"
            android:icon="@drawable/baseline_add_to_photos_24"
            android:title="@string/admin_menu_add_shipment"/>

        <item
            android:id="@+id/nav_admin_list_shipments"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/admin_menu_shipment_list"/>

        <item
            android:id="@+id/nav_admin_tracking"
            android:icon="@drawable/baseline_airport_shuttle_24"
            android:title="@string/admin_menu_tracking"/>

        <item
            android:id="@+id/nav_admin_comments"
            android:icon="@drawable/baseline_comment_24"
            android:title="@string/admin_menu_comments"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/admin_menu_logout"/>
        </menu>

    </item>

</menu>