<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".controller.fragments.admin.AdminAddShipmentFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="7dp">

            <!-- Package informaction -->
            <TextView
                android:id="@+id/tvPackageInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Package information"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:gravity="left"
                android:textSize="20sp"
                android:padding="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputPackagingType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_of_package"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:textColorHint="#837D7D"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity_"
                    android:textColorHint="#837D7D"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputFreight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Freight"
                    android:textColorHint="#837D7D"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSenderInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sender_information"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:gravity="left"
                android:textSize="20sp"
                android:padding="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_SenderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/namesender_"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_IDSender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Identification document"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvConsigneeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consignee_information"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:gravity="left"
                android:textSize="20sp"
                android:padding="10dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_ConsigneeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameConsignee"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_IDConsignee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/identification_document_Consignee"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destination_"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColorHint="#837D7D" />

            </com.google.android.material.textfield.TextInputLayout>







            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="40dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="20" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>

</ScrollView>