<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="@color/purple_500"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_nav_admin_header"
        app:menu="@menu/nav_menu"
        app:itemIconTint="@color/purple_500"
        app:itemTextColor="@color/purple_500"/>

<!--HOME ADMIN-->
<!--    <?xml version="1.0" encoding="utf-8"?>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".admin.homeActivity"
        android:orientation="vertical"
        android:padding="7dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="223dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            app:srcCompat="@drawable/flyingbox4" />

        <TextView
            android:id="@+id/homeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name of admin"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@android:color/transparent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnCreateShipment"
                    android:text="@string/create_a_shipment_"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btnViewShipment"
                    android:text="@string/view_shipment_status"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btnShipmentList"
                    android:text="@string/shipment_list"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btnComents"
                    android:text="@string/coments"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>